--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 </head>
 
 <body>
-    <h1></h1>
     <div class="container">
         <div class="container__conteudo">
             <div class="container__informacoes">
@@ -25,7 +24,7 @@
                 <input type="number" min="1" max="10" class="container__input">
                 <div class="chute container__botoes">
                     <button onclick="verificarChute()" class="container__botao">Chutar</button>
-                    <button onclick="" id="reiniciar" class="container__botao" disabled>Novo jogo</button>
+                    <button onclick="reiniciarJogo()" id="reiniciar2" class="container__botao" disabled>Novo jogo</button>
                 </div>
             </div>
             <img src="./img/ia.png" alt="Uma pessoa olhando para a esquerda" class="container__imagem-pessoa" />
